# pathkey-tauri

./: .gitignore  AWESOME.md  Cargo.toml  LICENSE  LICENSE-PATHKEY  NOTICE  README.md  merge.sh  package.json  pnpm-lock.yaml  splash.html  template.html
.changes/: WebviewWindow-on_webview_event.md  bundler-bundleName.md  cache-rustc-version.md  channel-ctor-callback.md  channel-never-cleaned-up.md  channel-small-payload-perf.md  check-plugin-versions.md  cli-dev-slow-start.md  compile-without-common-controls.md  data-tauri-drag-region-false.md  default-permissions-doc.md  detect-package-manager-env.md  disable-input-accessory-view-ios.md  dynamic-acl-feature.md  dynamic-dispatch-async-commands.md  enhance-state-panic-message.md  escape-nsis-resource-sidecar.md  eval-take-into-string.md  export-PixelUnit.md  export-TitleBarStyle-for-all-platform.md  expose-inner-tray-icon.md  feat-bundler-platform-certs.md  feat-dock-visibility-on-macos.md  fix-capability-filter.md  fix-channel-raw-message-type.md  fix-code-signing-after-patch.md  fix-dock-icon-gnome-wayland.md  fix-fileassociations-missing-lshandlerrank-on-macos.md  fix-ios-xcode-16.3.md  fix-js-set-icon-tray-menu.md  fix-main-binary-name-with-dot.md  fix-mobile-identifier-changes.md  fix-permission-add-duplicates.md  fix-referencing-command.md  fix-set-window-effects-main-thread.md  focusable.md  hebrew-translation.md  impl-set_device_event_filter-for-apphandle.md  improve-ios-sim.md  include-permissions-in-schema.md  (+51 more)
.github/: contributing.md  pull_request_template.md
.github/workflows/: publish-cli-js.yml  release.yml
crates/tauri-build/: CHANGELOG.md  Cargo.toml
crates/tauri-bundler/: CHANGELOG.md  Cargo.toml
crates/tauri-cli/: CHANGELOG.md  Cargo.toml  config.schema.json  metadata-v2.json  tauri.config.schema.json
crates/tauri-codegen/: CHANGELOG.md  Cargo.toml
crates/tauri-driver/: Cargo.toml
crates/tauri-macros/: CHANGELOG.md  Cargo.toml
crates/tauri-plugin/: CHANGELOG.md  Cargo.toml
crates/tauri-runtime/: CHANGELOG.md  Cargo.toml
crates/tauri-runtime-wry/: CHANGELOG.md  Cargo.toml
crates/tauri-schema-worker/: Cargo.toml
crates/tauri-utils/: CHANGELOG.md  Cargo.toml
splash/: splash.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
supply-chain/: config.toml
(+59 files in other folders)
