[package]
name = "pathkey-desktop"
version = "0.1.0"
description = "PathKey™ Desktop — a Tauri app that runs the PathKey web interface."
authors = ["PathKey"]
edition = "2021"
license = "Apache-2.0 AND Proprietary"  # Umbrella expression; details in LICENSE files.
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Optional useful plugins; comment/uncomment as needed:
# tauri-plugin-dialog = "2"
# tauri-plugin-os = "2"
# tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
